# sqler-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
src/sqler_cli/: __init__.py  cli.py  config.py  db.py  models.py
tests/: __init__.py  conftest.py  test_cli.py
